module 2 solution donee

--- a/pages/module2-solution/index.html
+++ b/pages/module2-solution/index.html
@@ -10,19 +10,21 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="container">
                     <span class="subtitle sub-a"> Sprout Salad </span>
-                    <p class="content">Protein Rich. Me Likey. Might taste raw, but can be overcome by boiling the sprouts first and garnishing with pepper and lime</p>
+                    <p class="content">Protein Rich. Me Likey. Might taste raw, but can be overcome by boiling the sprouts first and garnishing with pepper and lemon and some grated carrot.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="container">
                     <span class="subtitle sub-b"> Carrot Halwa </span>
-                    <p class="content">Lot of ghee and lot of sugar. Yummy, but makes you put on a tummy.</p>
+                    <p class="content">Lot of ghee and lot of sugar. Vitamin A from the carrot? Forget it, it's all lost in the process. Yummy, but makes you put on a tummy.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 col-sm-12">
                 <div class="container">
                     <span class="subtitle sub-c"> Bread Omelette </span>
-                    <p class="content">Wholesome breakfast when take with a glass of milk. My daily driver.</p>
+                    <p class="content">
+                        Wholesome breakfast when take with a glass of milk. You may prefer a boild egg to this, since it has higher protein content, but tastes better. My daily driver.
+                    </p>
                 </div>
             </div>
         </div>
